<resources>
    <string name="app_name">EnterProfileTamuku</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="username">Username</string>
    <string name="email_address">E-mail Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="please_fill_in_requirement_profile_information">Please fill-in Requirement Profile Information</string>
    <string name="_continue">Continue</string>
    <string name="please_enter_authentication_code">Please Enter Authentication Code</string>
    <string name="resend_code_2_00">Resend Code 2:00</string>
    <string name="we_ve_forwarded_the_authentication_code_to_60118887777">We\'ve forwarded the Authentication Code to 60118887777</string>
    <string name="todo">TODO</string>
    <string name="please_enter_your_mobile_number">Please Enter your Mobile Number</string>
    <string name="i_agree_to_tamuku_s_terms_of_service_and_privacy_policy"> I agree to Tamuku\'s Terms of Service and Privacy Policy.</string>
    <string name="item_1">Item 1</string>
</resources>
